--- a/Sasha-Hub/Sasha-Hub.csproj
+++ b/Sasha-Hub/Sasha-Hub.csproj
@@ -67,6 +67,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\Calculate.cs" />
+    <Compile Include="Commands\Define.cs" />
+    <Compile Include="Commands\Find.cs" />
+    <Compile Include="Commands\Get.cs" />
+    <Compile Include="Commands\Help.cs" />
+    <Compile Include="Commands\make.cs" />
+    <Compile Include="Sasha.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,7 +82,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Command.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
