--- a/Sasha-Hub/packages.config
+++ b/Sasha-Hub/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="1.3.2.465" targetFramework="net452" />
+  <package id="WpfAnimatedGif" version="1.4.14" targetFramework="net452" />
 </packages>
