--- a/Sasha-Hub/Sasha-Hub.csproj
+++ b/Sasha-Hub/Sasha-Hub.csproj
@@ -184,6 +184,9 @@
   <ItemGroup>
     <EmbeddedResource Include="commandData.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\chatdata.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
